--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<slf4j-api-version>1.7.5</slf4j-api-version>
+    <slf4j-version>1.7.5</slf4j-version>
 	</properties>
 
 	<dependencies>
@@ -47,6 +49,16 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<dependency>
+	       <groupId>org.slf4j</groupId>
+	       <artifactId>slf4j-api</artifactId>
+	       <version>${slf4j-api-version}</version>
+	   </dependency>
+	   <dependency>
+	       <groupId>org.slf4j</groupId>
+	       <artifactId>slf4j-log4j12</artifactId>
+	       <version>${slf4j-version}</version>
+	   </dependency>
 
 	</dependencies>
 
